# typefree

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  DESIGN.md  HANDY_OVERLAY_PASTE_MIGRATION.md  LICENSE  PRODUCT.md  README.md  README_ZH.md  doubaoapi.md  eslint.config.js  main.js  package-lock.json  package.json  preload.js
.github/workflows/: pages.yml  release.yml
docs/: 2026-03-08-update.md
docs/reference/chatgpt-codex-assets/: index.html  style.css
landing/: README.md  index.html  manifest.json
scripts/: prompt-score.js
src/: App.jsx  eslint.config.js  index.css  index.html  main.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_listener.rs  lib.rs  overlay.rs
src-tauri/src/commands/: audio_ducking.rs  clipboard.rs  database.rs  dictation.rs  hotkey.rs  logging.rs  mod.rs  postprocessing.rs  reasoning.rs  recording.rs  settings.rs  transcription.rs  vocabulary.rs  window.rs
src/assets/: README.md  icon.icns
src/components/: ClipboardSettings.tsx  ControlPanel.tsx  DeveloperSection.tsx  LandingPage.css  LandingPage.tsx  LocalModelPicker.tsx  OnboardingFlow.tsx  ReasoningModelSelector.tsx  RecordingOverlay.jsx  RecordingWaveform.jsx  SettingsModal.tsx  SettingsPage.tsx  TitleBar.tsx  TranscriptionModelPicker.tsx  VocabularySettings.tsx  WindowControls.tsx
src/components/ui/: ActivationModeSelector.tsx  ApiKeyInput.tsx  HotkeyInput.tsx  LanguageSelector.tsx  LoadingDots.tsx  MicPermissionWarning.tsx  MicrophoneSettings.tsx  ModelCardList.tsx  PasteToolsInfo.tsx  PermissionCard.tsx  PromptStudio.tsx  ProviderIcon.tsx  ProviderTabs.tsx  SettingsSection.tsx  SidebarModal.tsx  StepProgress.tsx  SupportDropdown.tsx  TranscriptionItem.tsx  button.tsx  dialog.tsx  toggle.tsx
src/config/: constants.ts  processingModes.ts  promptContext.ts  promptData.json  promptQuality.ts  prompts.ts
src/helpers/: audioManager.js  environment.js  ipcHandlers.js  soundFeedback.js  whisper.js
src/hooks/: useAudioRecording.js  useClipboardListener.ts  useHotkey.js  useHotkeyRegistration.ts  useLocalStorage.ts  useModelDownload.ts  usePermissions.ts  useSettings.ts  useUpdater.ts
src/i18n/: I18nContext.tsx  index.ts  translations.ts  types.ts
src/models/: ModelRegistry.ts  modelRegistryData.json
src/public/typefree-landing/: README.md  halftone-background.js  index.html  typefree-image-renderer.html
src/services/: BaseReasoningService.ts  ReasoningService.ts  VolcengineASRService.ts
src/types/: clipboard.ts  electron.ts
src/utils/: SecureCache.ts  modelPickerStyles.ts  providerIcons.ts  tauriAPI.ts  vocabulary.ts
