[package]
name = "typefree"
version = "2.0.0"
description = "Desktop dictation app with cloud speech-to-text"
authors = ["Typefree Team"]
edition = "2021"

[lib]
name = "typefree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = { version = "3", features = ["image-data"] }
enigo = "0.2"
base64 = "0.22"
image = "0.25"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
dirs = "6"
