[package]
name = "typefree"
version = "3.5.0"
description = "Desktop dictation app with cloud speech-to-text"
authors = ["Typefree Team"]
edition = "2021"

[lib]
name = "typefree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = { version = "3", features = ["image-data"] }
enigo = "0.2"
base64 = "0.22"
image = "0.25"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", default-features = false, features = ["std", "exception"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }
objc2-avf-audio = { version = "0.3.2", default-features = false, features = ["AVAudioRecorder", "AVAudioSettings"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSDictionary", "NSError", "NSObject", "NSString", "NSURL", "NSValue"] }
# Vendored from https://github.com/ahkohd/tauri-nspanel (git fetch is blocked in this environment).
tauri-nspanel = { path = "vendor/tauri-nspanel-2.1" }
