[package]
name = "typefree"
version = "5.4.0"
description = "Desktop dictation app with cloud speech-to-text"
authors = ["Typefree Team"]
edition = "2021"

[lib]
name = "typefree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = { version = "3", features = ["image-data"] }
enigo = "0.2"
base64 = "0.22"
image = "0.25"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
dirs = "6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
http = "1"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { path = "vendor/tauri-nspanel-2.1" }
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
objc2-avf-audio = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_Variant"
] }
